# demo02

pytorch-ssd/: convert_to_caffe2_models.py  eval_caffe2.py  eval_ssd.py  onnxDemo.py  run_ssd_example.py  run_ssd_example_caffe2.py  train_ssd.py
pytorch-ssd/vision/ssd/: ssd.py
pytorch-ssd/vision/ssd/config/: vgg_ssd_config.py
pytorch-ssd/vision/utils/: box_utils.py
ssd_caffe2/: BoxUtils.cpp  BoxUtils.h  CMakeLists.txt  Caffe2Net.cpp  Caffe2Net.h  SSDNet.cpp  SSDNet.h  main.cpp
ssd_tensorrt/: BoxUtils.cpp  CMakeLists.txt  demo.cpp  main.cpp  test.txt
